--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+
 body{
-    font-family: 'Roboto';
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.layout-main{
+    width: 1504px;
+    margin-left: auto;
+    margin-right: auto;
 }
