--- a/src/app/features/questions/components/single-select-question/single-select-question.component.scss
+++ b/src/app/features/questions/components/single-select-question/single-select-question.component.scss
@@ -1,3 +1,5 @@
-:host {
-  display: block;
+:host ::ng-deep .p-card{
+    box-shadow: none;
+    border-radius: 10px;
+    border: 1px solid var(--p-surface-200);
 }
