Added simple cards for single select questions added styling added check answer endpoint integration

--- a/src/app/features/questions/components/question-view/question-view.component.html
+++ b/src/app/features/questions/components/question-view/question-view.component.html
@@ -12,7 +12,7 @@
       </ng-container>
 
     </div>
-        <div class="flex flex-wrap justify-center gap-2">
+        <div class="flex justify-between items-center my-6">
           <p-button  
             icon="pi pi-arrow-left" 
             [disabled]="!pagedResponse.hasPreviousPage" 
@@ -21,8 +21,6 @@
             (click)="fetchPreviousQuestion()" 
             severity="secondary" 
             styleClass="min-w-40" />
-          
-            <p-button label="     " severity="secondary" styleClass="min-w-40" />
           
           <p-button  
             icon="pi pi-arrow-right" 
