--- a/src/app/features/quiz-collections/components/quiz-collection/quiz-collection.component.html
+++ b/src/app/features/quiz-collections/components/quiz-collection/quiz-collection.component.html
@@ -29,7 +29,8 @@
 					<p-button 
 					label="View collection" 
 					[link]="true"
-					[routerLink]="'/quiz-collections/' + item.id + '/questions'"/>
+					[routerLink]="'/quiz-collections/' + item.id + '/questions'" 
+					[queryParams]="{pageNumber: 1}"/>
 				</ng-template>
   	  	</p-card>
 	</div>
